--- a/sivustotieto.css
+++ b/sivustotieto.css
@@ -1,5 +1,6 @@
 [class*="container"] {
     background-color: rgb(195,229,174);
+    background-image: linear-gradient (rgb(195,229,174), rgb(218, 230, 211));
     border: 3px solid black;
     border-radius: 5px;
     margin: 1px;
@@ -11,6 +12,7 @@ header{
     border: 3px solid black;
     border-radius: 5px;
     background-color: rgb(206, 231, 173);
+    background-image: linear-gradient (rgb(206, 231, 173), rgb(223, 230, 214));
     padding: 10px;
     align-items: center;
     margin: 1px;
@@ -20,6 +22,8 @@ article{
     border: 3px solid black;
     border-radius: 10px;
     background-color: rgb(241,225,166);
+    background-image: linear-gradient(rgb(241,225,166), rgb(113, 167, 42));
+    /*smoothened the green, it seemed too much for this article*/
     padding: 10px;
     margin: 1px;
 }
@@ -27,7 +31,8 @@ article{
 footer{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(206, 231, 173);
+    background-color: rgb(113, 167, 42);
+    background-image: linear-gradient(rgb(113, 167, 42), rgb(199, 219, 172));
     padding: 10px;
     margin: 1px;
 }
