sass didn't just work..started with places-page

--- a/kuvakysymykset.css
+++ b/kuvakysymykset.css
@@ -1,6 +1,7 @@
 /*content style*/
 #content {
     font-family:sans-serif;
+    background-color:rgb(206, 231, 173);
 }
 /* main navi style */
 [class*="container"] {
