--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
     margin-top: 0px;
     margin-bottom: 0px;
 }
+body {
+    background-color: rgb(218, 230, 211);
+}
 
 header{
     border: 3px solid black;
