--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-[class*="container"] {
+[class="container"] {
     background-color: rgb(184, 229, 155);
     background-image: linear-gradient (rgb(184, 229, 155), rgb(218, 230, 211));
     border: 3px solid black;
