--- a/sivustotieto.css
+++ b/sivustotieto.css
@@ -1,29 +1,34 @@
 [class*="container"] {
-    background-color: rgb(195,229,174);
-    background-image: linear-gradient (rgb(195,229,174), rgb(218, 230, 211));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     border: 3px solid black;
     border-radius: 5px;
     margin: 1px;
     margin-top: 0px;
     margin-bottom: 0px;
 }
-
 header{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(206, 231, 173);
-    background-image: linear-gradient (rgb(206, 231, 173), rgb(223, 230, 214));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
-    align-items: center;
-    margin: 1px;
+    margin: 1px; 
+}
+#historiikki{
+    font-family: algerian;
+    font-size: 100px;
+    text-align: center;
+}
+#lisätieto{
+    text-align: center;
 }
 
 article{
     border: 3px solid black;
     border-radius: 10px;
-    background-color: rgb(241,225,166);
-    background-image: linear-gradient(rgb(241,225,166), rgb(113, 167, 42));
-    /*smoothened the green, it seemed too much for this article*/
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
 }
@@ -31,8 +36,8 @@ article{
 footer{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(113, 167, 42);
-    background-image: linear-gradient(rgb(113, 167, 42), rgb(199, 219, 172));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
 }
