--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-/* [class="container"] {
-    background-color: rgb(184, 229, 155);
-    background-image: linear-gradient (rgb(184, 229, 155), rgb(218, 230, 211));
-    border: 3px solid black;
-    border-radius: 5px;
-    margin: 1px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-} */
 body {
     background-color: rgb(218, 230, 211);
 }
@@ -14,10 +5,9 @@ body {
 header{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(206, 231, 173);
-    background-image: linear-gradient (rgb(134, 209, 36), rgb(184, 229, 155), rgb(119, 236, 51));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
-    align-items: center;
     margin: 1px; 
 }
 #historiikki{
@@ -28,8 +18,8 @@ header{
 article{
     border: 3px solid black;
     border-radius: 10px;
-    background-color: rgb(241,225,166);
-    background-image: linear-gradient(rgb(241,225,166), rgb(113, 167, 42));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
 }
@@ -37,15 +27,14 @@ article{
 footer{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(113, 167, 42);
-    background-image: linear-gradient(rgb(113, 167, 42), rgb(241,225,166));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
 }
-
 #kuvakysymyksetKuvake{
     grid-column: 2/3;
-    border: 10px solid rgb(62, 124, 206);
+    border: 10px solid rgb(45, 131, 202);
     height: 200px;
     width: 200px;
 }
@@ -64,7 +53,7 @@ footer{
 #paikatKuvake {
     background-size: cover;
     grid-column: 4/5;
-    border: 10px solid rgb(19, 133, 141);
+    border: 10px solid rgb(18, 95, 91);
     height: 200px;
     width: 200px;
 }
