--- a/tekstikysymykset.css
+++ b/tekstikysymykset.css
@@ -1,15 +1,22 @@
 body {
-    background-color: rgb(218, 230, 211);
+    background-color: rgb(213,236,235);
 }
 header{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(206, 231, 173);
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
-    align-items: center;
-    margin: 1px;
+    margin: 1px; 
 }
-
+#historiikki{
+    font-family: algerian;
+    font-size: 50px;
+    text-align: center;
+}
+#lisätieto{
+    text-align: center;
+}
 /* article{
     border: 3px solid black;
     border-radius: 10px;
@@ -18,21 +25,22 @@ header{
     margin: 1px;
 } */
 #question1, #question2, #question3, #question4, #question5{
-    background-color: rgb(206, 231, 173);
-    background-image: linear-gradient(rgb(206, 231, 173),rgb(175, 218, 117));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
 }
 
 footer{
     border: 3px solid black;
     border-radius: 5px;
-    background-color: rgb(113, 167, 42);
-    background-image: linear-gradient(rgb(113, 167, 42), rgb(241,225,166));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
 }
 #uudestaan {
     border-radius: 15px;
-    background-color: rgb(151,219,174);
+    background-color: rgb(45, 131, 202);
+    background-image: linear-gradient(rgb(45, 131, 202), rgb(45,202,194));
     border-color: black;
     margin: 10px;
     padding: 10px;
@@ -42,7 +50,8 @@ footer{
 }
 .checkbutton, .btn {
     border-radius: 15px;
-    background-color: rgb(151,219,174);
+    background-color: rgb(45, 131, 202);
+    background-image: linear-gradient(rgb(45, 131, 202), rgb(45,202,194));
     border-color: black;
     margin: 10px;
     padding: 10px;
