--- a/kuvakysymykset.css
+++ b/kuvakysymykset.css
@@ -76,8 +76,8 @@ article {
 #seuraava4, #seuraava5, .button, #uudestaan, #tulos {
     height: 50px;
     width: 100px;
-    background-color: rgb(45, 131, 202);
-    background-image: linear-gradient(rgb(45, 131, 202), rgb(45,202,194));
+    background-color: rgb(45,202,194);
+    background-image: linear-gradient(rgb(45,202,194),rgb(45, 131, 202) );
     border-radius: 5px;
     font-weight: bolder;
     margin-top: 5px;
@@ -109,7 +109,7 @@ footer{
     padding: 10px;
     margin: 1px;
 }
-/* do not show header and footer in the smallest display */
+/* do not show header and footer/change some items in the smallest display */
 @media screen and (max-width: 576px){
     header{
         display: none;
@@ -117,4 +117,12 @@ footer{
     footer {
         display: none;
     }
+    .kuva{
+        height: 150px;
+        width: 125px;
+    }
+    h1, h2{
+        font-size:medium;
+    }
+
 }
