--- a/sivustotietoSASS/sivustotietocss/sivustotietoSCSS/SCSS.scss
+++ b/sivustotietoSASS/sivustotietocss/sivustotietoSCSS/SCSS.scss
@@ -1,3 +1,7 @@
+//variables shown in article p-elements and footer
+$background-colour:silver;
+$colour:rgb(0, 28, 128);
+
 [class*="container"] {
     background-color: rgb(45,202,194);
     background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
@@ -10,18 +14,21 @@
 header{
     border: 3px solid black;
     border-radius: 5px;
+    //needed some bright colour to test sass 
+    // background-color: red;
     background-color: rgb(45,202,194);
     background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px; 
-}
-#historiikki{
-    font-family: algerian;
-    font-size: 100px;
-    text-align: center;
-}
-#lisätieto{
-    text-align: center;
+        .sassHeadline{ //tested sass and lef it at least for now
+            color: purple;
+            font-family: algerian;
+            font-size: 100px;
+            text-align: center;    
+        }
+        #lisätieto{
+            text-align: center;
+        }
 }
 
 article{
@@ -31,6 +38,11 @@ article{
     background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
+        p{
+            border: 3px solid black;
+            font-weight: bold;
+            background-color: $background-colour;
+        }
 }
 
 footer{
@@ -40,4 +52,14 @@ footer{
     background-image: linear-gradient(rgb(213,236,235), rgb(45,202,194));
     padding: 10px;
     margin: 1px;
+    p{
+        font-weight: bold;
+        color: $colour;
+      }
 }
+@media screen and (max-width: 576px){
+    header{display:none;     
+    }    
+    footer{display:none;     
+    }    
+    }
